Ensure all docs are synced and pushed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -207,6 +207,20 @@
                     </div>
                 </div>
                 <div class="kpi-card">
+                    <div class="kpi-icon">🌾</div>
+                    <div class="kpi-info">
+                        <span class="kpi-label">Área Colhida (Total)</span>
+                        <span class="kpi-value" id="kpi-area-colhida">0 ha</span>
+                    </div>
+                </div>
+                <div class="kpi-card">
+                    <div class="kpi-icon">📊</div>
+                    <div class="kpi-info">
+                        <span class="kpi-label">Colheita / Plantio</span>
+                        <span class="kpi-value" id="kpi-colheita-plantio">0</span>
+                    </div>
+                </div>
+                <div class="kpi-card">
                     <div class="kpi-icon">📋</div>
                     <div class="kpi-info">
                         <span class="kpi-label">OS Ativas</span>
