Fix: Melhorias na filtragem de datas e logs de debug para gráficos do dashboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -284,7 +284,7 @@
                             <option value="30">Últimos 30 dias</option>
                             <option value="90">Últimos 90 dias</option>
                             <option value="365">Último Ano</option>
-                            <option value="all">Todo o Período</option>
+                            <option value="all" selected>Todo o Período</option>
                         </select>
                     </div>
                     <div class="filter-group">
