Fix: Sincronização de estoque por OS e cálculo de transporte de composto

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1059,6 +1059,7 @@
                         <button class="btn btn-secondary" id="btn-open-fazendas-modal">🚜 Fazendas</button>
                         <button class="btn btn-secondary" id="btn-liberacao-colheita">🌾 Liberação Colheita</button>
                         <button class="btn btn-primary" id="btn-novo-lancamento">➕ Novo Plantio</button>
+                        <button class="btn btn-primary" id="btn-nova-colheita-muda" style="background-color: #d63384; border-color: #d63384;">🌾 Nova Colheita de Muda</button>
                     </div>
                 </div>
                 <div class="table-container" style="flex: 1; overflow-y: auto;">
