feat: melhorias no transporte de adubo (seleção de OS) e correções de estoque

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2150,7 +2150,9 @@
                     <!-- Campo OS para Adubo Modal -->
                     <div class="form-group adubo-field">
                         <label for="modal-viagem-adubo-os">Número da OS</label>
-                        <input type="number" id="modal-viagem-adubo-os" placeholder="Número da OS" step="1">
+                        <select id="modal-viagem-adubo-os" class="form-control">
+                            <option value="">Selecione a OS</option>
+                        </select>
                     </div>
                     <div class="form-group adubo-field">
                         <label for="modal-viagem-frente">Frente</label>
