--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2271,13 +2271,13 @@
     </script>
     <!-- Supabase & Config -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
-    <script src="config.js?v=FIX-BUTTON-22"></script>
+    <script src="config.js?v=ADUBO-OS-FIX-23"></script>
     
-    <script src="api.js?v=FIX-BUTTON-22"></script>
-    <script src="ui.js?v=FIX-BUTTON-22"></script>
-    <script src="import.js?v=CACHE-BUST-10000"></script>
-    <script src="app.js?v=PLANTIO-DETAILS-19"></script>
-    <link rel="stylesheet" href="main.css?v=CACHE-BUST-10000">
+    <script src="api.js?v=ADUBO-OS-FIX-23"></script>
+    <script src="ui.js?v=ADUBO-OS-FIX-23"></script>
+    <script src="import.js?v=ADUBO-OS-FIX-23"></script>
+    <script src="app.js?v=ADUBO-OS-FIX-23"></script>
+    <link rel="stylesheet" href="main.css?v=ADUBO-OS-FIX-23">
     
     <script>
     // FIX DE EMERGÊNCIA - BYPASS DE CACHE PARA SAVE VIAGEM
