--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-    <link rel="stylesheet" href="main.css?v=ADUBO-OS-FIX-31">
+    <link rel="stylesheet" href="main.css?v=ADUBO-OS-FIX-32">
 </head>
 <body>
     <div class="app-container">
@@ -1217,10 +1217,10 @@
                         <div class="chart-card form-card">
                             <h4 style="margin: 0 0 10px 0;">Dados da OS</h4>
                         <div style="margin-bottom: 15px; padding: 10px; background-color: #f5f5f5; border-radius: 4px; display: flex; align-items: center; justify-content: space-between;">
-                            <span>Importar dados de arquivo (PDF/Imagem):</span>
+                            <span>Importar dados de arquivo (PDF):</span>
                             <div>
-                                <input type="file" id="os-file-input" accept="application/pdf,image/*" style="display: none;">
-                                <button class="btn btn-secondary" onclick="document.getElementById('os-file-input').click()">📂 Selecionar Arquivo</button>
+                                <input type="file" id="os-file-input" accept="application/pdf" style="display: none;">
+                                <button class="btn btn-secondary" onclick="document.getElementById('os-file-input').click()">📂 Selecionar PDF</button>
                             </div>
                         </div>
 
@@ -2498,12 +2498,12 @@
 
     <!-- Supabase & Config -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
-    <script src="config.js?v=ADUBO-OS-FIX-31"></script>
+    <script src="config.js?v=ADUBO-OS-FIX-32"></script>
     
-    <script src="api.js?v=ADUBO-OS-FIX-31"></script>
-    <script src="ui.js?v=ADUBO-OS-FIX-31"></script>
-    <script src="import.js?v=ADUBO-OS-FIX-31"></script>
-    <script src="app.js?v=ADUBO-OS-FIX-31"></script>
+    <script src="api.js?v=ADUBO-OS-FIX-32"></script>
+    <script src="ui.js?v=ADUBO-OS-FIX-32"></script>
+    <script src="import.js?v=ADUBO-OS-FIX-32"></script>
+    <script src="app.js?v=ADUBO-OS-FIX-32"></script>
     
     <script>
     // FIX DE EMERGÊNCIA - BYPASS DE CACHE PARA SAVE VIAGEM
