fix_pdf_render_timeout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-    <link rel="stylesheet" href="main.css?v=ADUBO-OS-FIX-44-DEBUG">
+    <link rel="stylesheet" href="main.css?v=ADUBO-OS-FIX-45-RENDER">
 </head>
 <body>
     <!-- Configuração de API Key -->
@@ -2522,12 +2522,12 @@
 
     <!-- Supabase & Config -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
-    <script src="config.js?v=ADUBO-OS-FIX-44-DEBUG"></script>
+    <script src="config.js?v=ADUBO-OS-FIX-45-RENDER"></script>
     
-    <script src="api.js?v=ADUBO-OS-FIX-44-DEBUG"></script>
-    <script src="ui.js?v=ADUBO-OS-FIX-44-DEBUG"></script>
-    <script src="import.js?v=ADUBO-OS-FIX-44-DEBUG"></script>
-    <script src="app.js?v=ADUBO-OS-FIX-44-DEBUG"></script>
+    <script src="api.js?v=ADUBO-OS-FIX-45-RENDER"></script>
+    <script src="ui.js?v=ADUBO-OS-FIX-45-RENDER"></script>
+    <script src="import.js?v=ADUBO-OS-FIX-45-RENDER"></script>
+    <script src="app.js?v=ADUBO-OS-FIX-45-RENDER"></script>
     
     <script>
     // FIX DE EMERGÊNCIA - BYPASS DE CACHE PARA SAVE VIAGEM
